9/5/2024
	Added code to have findSolution return the solver status when not in test mode.

9/4/2024 bis
	Added alias for Look-And-Say Cages that parses the typical clue string, and creates the appropriate zone.
	Added support for psycho look-and-say cages. Thanks to The Book Wyrm for the inspiration and initial ideas on coding.

9/4/2024
	Added support for Unique Pairs Lines, a set of lines where each line has no repeats, and the set of digits on any pair of lines have a most one common digit. Constraint due to Paletron...thanks!
	Added support for cell index lines, a set of lines which index a set of cells, in different rows, columns, and having different digits, such that read one direction or the other, the line indexes a row/column/value triple. Constraint due to KenGlue...thanks!
	Updated zone constraint to allow inclusion of nulls, i.e. digits which cannot appear in the zone.
	
6/11/2024
	Fixed bug in new JSS code that was causing multiple solutions.
	Added support to allow a list of colors to be forced in a row/col, without specifying which group has which color
	Added assertions of shading/unshading/coloring to support lookahead for setting
	Added new test cases.

6/10/24 bis
	Added additional JSS test case

6/10/2024
	Migrated Japanese Sum Sudoku support to a separate file.
	Completely re-did JSS algorithm:
		much simpler model
		faster
		provides multi-color support
		allows ambiguous sum or ambiguous color clues
	Implemented test support for JSS, and added test cases.
	Updated overall test harness to integrate JSS testing with other testing, including modifying some test cases to update test output format.

5/26/2024
	Implemented slingshot clues, added test case.

5/24/2024
	Added support for Regionometers, including test case.
	Updated parity quad code to allow different numbers of disallowed odd/evens per 2x2 quad. Added test case.

5/22/24